--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,27 +25,28 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <!-- Monday - Sunday start/end time EditText Views. -->
+
     <com.example.javatimescheduler.Day
         android:id="@+id/monday_start_edittext"
         android:layout_width="100dp"
         android:layout_height="40sp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="48dp"
         android:hint="@string/start_hint"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/monday_textview"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/date_textview" />
 
     <com.example.javatimescheduler.Day
         android:id="@+id/monday_end_edittext"
         android:layout_width="100dp"
         android:layout_height="40sp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="48dp"
         android:hint="@string/end_hint"
         android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.294"
-        app:layout_constraintStart_toEndOf="@+id/monday_start_edittext"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintStart_toEndOf="@+id/timedash1"
+        app:layout_constraintTop_toBottomOf="@+id/date_textview" />
 
     <com.example.javatimescheduler.Day
         android:id="@+id/tuesday_start_edittext"
@@ -60,11 +61,11 @@
         android:id="@+id/tuesday_end_edittext"
         android:layout_width="100dp"
         android:layout_height="40sp"
-        android:inputType="time"
         android:hint="@string/end_hint"
+        android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.294"
-        app:layout_constraintStart_toEndOf="@+id/tuesday_start_edittext"
+        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintStart_toEndOf="@+id/timedash2"
         app:layout_constraintTop_toBottomOf="@+id/monday_end_edittext" />
 
     <com.example.javatimescheduler.Day
@@ -83,8 +84,8 @@
         android:hint="@string/end_hint"
         android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.294"
-        app:layout_constraintStart_toEndOf="@+id/wednesday_start_edittext"
+        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintStart_toEndOf="@+id/timedash3"
         app:layout_constraintTop_toBottomOf="@+id/tuesday_end_edittext" />
 
     <com.example.javatimescheduler.Day
@@ -100,11 +101,11 @@
         android:id="@+id/thursday_end_edittext"
         android:layout_width="100dp"
         android:layout_height="40sp"
-        android:inputType="time"
         android:hint="@string/end_hint"
+        android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.294"
-        app:layout_constraintStart_toEndOf="@+id/thursday_start_edittext"
+        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintStart_toEndOf="@+id/timedash4"
         app:layout_constraintTop_toBottomOf="@+id/wednesday_end_edittext" />
 
     <com.example.javatimescheduler.Day
@@ -120,11 +121,11 @@
         android:id="@+id/friday_end_edittext"
         android:layout_width="100dp"
         android:layout_height="40sp"
-        android:inputType="time"
         android:hint="@string/end_hint"
+        android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.294"
-        app:layout_constraintStart_toEndOf="@+id/friday_start_edittext"
+        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintStart_toEndOf="@+id/timedash5"
         app:layout_constraintTop_toBottomOf="@+id/thursday_end_edittext" />
 
     <com.example.javatimescheduler.Day
@@ -143,17 +144,19 @@
         android:hint="@string/end_hint"
         android:inputType="time"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.294"
-        app:layout_constraintStart_toEndOf="@+id/saturday_start_edittext"
+        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintStart_toEndOf="@+id/timedash6"
         app:layout_constraintTop_toBottomOf="@+id/friday_end_edittext" />
 
+
+    <!-- Buttons: Save/Load, Clear, and Delete -->
     <com.example.javatimescheduler.Day
         android:id="@+id/sunday_start_edittext"
         android:layout_width="100dp"
         android:layout_height="40sp"
         android:hint="@string/start_hint"
         android:inputType="time"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/save_load_button"
         app:layout_constraintStart_toEndOf="@+id/sunday_textview"
         app:layout_constraintTop_toBottomOf="@+id/saturday_start_edittext"
         app:layout_constraintVertical_bias="0.0" />
@@ -164,15 +167,13 @@
         android:layout_height="40sp"
         android:hint="@string/end_hint"
         android:inputType="time"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/save_load_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.294"
-        app:layout_constraintStart_toEndOf="@+id/sunday_start_edittext"
+        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintStart_toEndOf="@+id/ttmedash7"
         app:layout_constraintTop_toBottomOf="@+id/saturday_end_edittext"
         app:layout_constraintVertical_bias="0.0" />
 
-
-    <!-- Buttons: Save/Load, Clear, and Delete -->
     <Button
         android:id="@+id/save_load_button"
         android:layout_width="wrap_content"
@@ -184,8 +185,6 @@
         android:text="@string/save_load_button_label"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sunday_textview"
-        app:layout_constraintVertical_bias="1.0"
         tools:ignore="UsingOnClickInXml" />
 
 
@@ -199,9 +198,7 @@
         android:layout_marginBottom="16dp"
         android:text="@string/clear_button_label"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/save_load_button"
-        app:layout_constraintTop_toBottomOf="@+id/sunday_textview"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/save_load_button" />
 
     <Button
         android:id="@+id/delete_button"
@@ -212,22 +209,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.151"
-        app:layout_constraintStart_toEndOf="@+id/clear_button"
-        app:layout_constraintTop_toBottomOf="@+id/sunday_textview"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/clear_button" />
 
 
     <!-- Text labels for Monday - Sunday -->
+
     <TextView
         android:id="@+id/monday_textview"
         android:layout_width="100dp"
         android:layout_height="40sp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="48dp"
         android:text="@string/monday_label"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/date_textview" />
 
     <TextView
         android:id="@+id/tuesday_textview"
@@ -279,33 +275,104 @@
         app:layout_constraintTop_toBottomOf="@+id/friday_textview"
         android:layout_marginLeft="16dp" />
 
+
+    <!-- Text label for week -->
+
     <TextView
         android:id="@+id/sunday_textview"
         android:layout_width="100dp"
         android:layout_height="40sp"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:text="@string/sunday_label"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/save_load_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/saturday_textview"
-        app:layout_constraintVertical_bias="0.0"
-        android:layout_marginLeft="16dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
-
-    <!-- Text label for week -->
     <TextView
         android:id="@+id/date_textview"
         android:layout_width="60dp"
         android:layout_height="22dp"
         android:layout_marginStart="56dp"
+        android:layout_marginLeft="56dp"
+        android:layout_marginTop="32dp"
         android:text="@string/date_textview_label"
-        app:layout_constraintBottom_toTopOf="@+id/monday_textview"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39"
-        android:layout_marginLeft="56dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/timedash1"
+        android:layout_width="25dp"
+        android:layout_height="40sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="48dp"
+        android:text="@string/timedash_label"
+        app:layout_constraintStart_toEndOf="@+id/monday_start_edittext"
+        app:layout_constraintTop_toBottomOf="@+id/date_textview" />
 
+    <TextView
+        android:id="@+id/timedash2"
+        android:layout_width="25dp"
+        android:layout_height="40sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:text="@string/timedash_label"
+        app:layout_constraintStart_toEndOf="@+id/tuesday_start_edittext"
+        app:layout_constraintTop_toBottomOf="@+id/timedash1" />
+
+    <TextView
+        android:id="@+id/timedash3"
+        android:layout_width="25dp"
+        android:layout_height="40sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:text="@string/timedash_label"
+        app:layout_constraintStart_toEndOf="@+id/wednesday_start_edittext"
+        app:layout_constraintTop_toBottomOf="@+id/timedash2" />
+
+    <TextView
+        android:id="@+id/timedash4"
+        android:layout_width="25dp"
+        android:layout_height="40sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:text="@string/timedash_label"
+        app:layout_constraintStart_toEndOf="@+id/thursday_start_edittext"
+        app:layout_constraintTop_toBottomOf="@+id/timedash3" />
+
+    <TextView
+        android:id="@+id/timedash5"
+        android:layout_width="25dp"
+        android:layout_height="40sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:text="@string/timedash_label"
+        app:layout_constraintStart_toEndOf="@+id/friday_start_edittext"
+        app:layout_constraintTop_toBottomOf="@+id/timedash4" />
+
+    <TextView
+        android:id="@+id/timedash6"
+        android:layout_width="25dp"
+        android:layout_height="40sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:text="@string/timedash_label"
+        app:layout_constraintStart_toEndOf="@+id/saturday_start_edittext"
+        app:layout_constraintTop_toBottomOf="@+id/timedash5" />
+
+    <TextView
+        android:id="@+id/ttmedash7"
+        android:layout_width="25dp"
+        android:layout_height="40sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:text="@string/timedash_label"
+        app:layout_constraintBottom_toTopOf="@+id/save_load_button"
+        app:layout_constraintStart_toEndOf="@+id/sunday_start_edittext"
+        app:layout_constraintTop_toBottomOf="@+id/timedash6"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
