--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/date_textview"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
 
     <!-- Monday - Sunday start/end time EditText Views. -->
 
@@ -34,7 +35,8 @@
         android:hint="@string/start_hint"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/monday_textview"
-        app:layout_constraintTop_toBottomOf="@+id/date_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/date_textview"
+        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/monday_end_edittext"
@@ -46,7 +48,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toEndOf="@+id/timedash1"
-        app:layout_constraintTop_toBottomOf="@+id/date_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/date_textview"
+        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,TextContrastCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/tuesday_start_edittext"
@@ -55,7 +58,8 @@
         android:hint="@string/start_hint"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/tuesday_textview"
-        app:layout_constraintTop_toBottomOf="@+id/monday_start_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/monday_start_edittext"
+        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/tuesday_end_edittext"
@@ -66,7 +70,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toEndOf="@+id/timedash2"
-        app:layout_constraintTop_toBottomOf="@+id/monday_end_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/monday_end_edittext"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/wednesday_start_edittext"
@@ -75,7 +80,8 @@
         android:hint="@string/start_hint"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/wednesday_textview"
-        app:layout_constraintTop_toBottomOf="@+id/tuesday_start_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/tuesday_start_edittext"
+        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/wednesday_end_edittext"
@@ -86,7 +92,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toEndOf="@+id/timedash3"
-        app:layout_constraintTop_toBottomOf="@+id/tuesday_end_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/tuesday_end_edittext"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/thursday_start_edittext"
@@ -95,7 +102,8 @@
         android:hint="@string/start_hint"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/thursday_textview"
-        app:layout_constraintTop_toBottomOf="@+id/wednesday_start_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/wednesday_start_edittext"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/thursday_end_edittext"
@@ -106,7 +114,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toEndOf="@+id/timedash4"
-        app:layout_constraintTop_toBottomOf="@+id/wednesday_end_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/wednesday_end_edittext"
+        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/friday_start_edittext"
@@ -115,7 +124,8 @@
         android:hint="@string/start_hint"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/friday_textview"
-        app:layout_constraintTop_toBottomOf="@+id/thursday_start_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/thursday_start_edittext"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/friday_end_edittext"
@@ -126,7 +136,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toEndOf="@+id/timedash5"
-        app:layout_constraintTop_toBottomOf="@+id/thursday_end_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/thursday_end_edittext"
+        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/saturday_start_edittext"
@@ -135,7 +146,8 @@
         android:hint="@string/start_hint"
         android:inputType="time"
         app:layout_constraintStart_toEndOf="@+id/saturday_textview"
-        app:layout_constraintTop_toBottomOf="@+id/friday_start_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/friday_start_edittext"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/saturday_end_edittext"
@@ -146,7 +158,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toEndOf="@+id/timedash6"
-        app:layout_constraintTop_toBottomOf="@+id/friday_end_edittext" />
+        app:layout_constraintTop_toBottomOf="@+id/friday_end_edittext"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
 
     <!-- Buttons: Save/Load, Clear, and Delete -->
@@ -155,11 +168,13 @@
         android:layout_width="100dp"
         android:layout_height="40sp"
         android:hint="@string/start_hint"
+        android:hintTextColor="#757575"
         android:inputType="time"
         app:layout_constraintBottom_toTopOf="@+id/save_load_button"
         app:layout_constraintStart_toEndOf="@+id/sunday_textview"
         app:layout_constraintTop_toBottomOf="@+id/saturday_start_edittext"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <com.javatimescheduler.Day
         android:id="@+id/sunday_end_edittext"
@@ -172,7 +187,8 @@
         app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toEndOf="@+id/ttmedash7"
         app:layout_constraintTop_toBottomOf="@+id/saturday_end_edittext"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <Button
         android:id="@+id/save_load_button"
